# wgpu-learning

./: Cargo.toml  shader.wgsl
src/: bind_group_layout.rs  camera.rs  main.rs  mesh_builder.rs  ubo.rs
src/model/: game_object.rs  game_objects.rs  mod.rs  world.rs
src/renderer_backend/: bind_group.rs  bind_group_layout.rs  material.rs  mesh_builder.rs  mod.rs  pipeline.rs  ubo.rs
src/shaders/: cells.wgsl  map.wgsl  shader.wgsl  texture.wgsl
